--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Meet landing page</title>
-</head>
-<body>
-  Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  Download v1.3
-  What is it?
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
 
-  01
-  Built for modern use
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
 
-  Smarter meetings, all in one place
+    <title>Meet landing page | jiahe</title>
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <a href="#"><img src="assets/logo.svg" alt="logo" class="logo" /></a>
+      </header>
 
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
+      <main>
+        <section class="hero">
+          <picture class="hero-img--responsive">
+            <source
+              srcset="assets/tablet/image-hero.png"
+              media="(max-width: 84em)"
+            />
 
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
+            <img
+              src="assets/desktop/image-hero-left.png"
+              alt="Hero image on the left side"
+              class="hero-img--left"
+            />
+          </picture>
 
-  Download v1.3
-</body>
+          <div class="hero-img-box--left">
+            <img
+              src="assets/desktop/image-hero-left.png"
+              alt="Hero image on the left side"
+              width="394"
+              height="303"
+              class="hero-img--left"
+            />
+          </div>
+
+          <div class="hero-text-box">
+            <h1 class="heading-primary">Group Chat for Everyone</h1>
+            <p class="paragraph">
+              Meet makes it easy to connect with others face-to-face virtually
+              and collaborate across any device.
+            </p>
+            <div class="btn-group">
+              <a href="#" class="btn btn-cyan">Download <span>v1.3</span></a>
+              <a href="#" class="btn btn-purple">What is it?</a>
+            </div>
+          </div>
+
+          <div class="hero-img-box--right">
+            <img
+              src="assets/desktop/image-hero-right.png"
+              alt="Hero image on the right side"
+              width="394"
+              height="303"
+              class="hero-img--right"
+            />
+          </div>
+        </section>
+
+        <section class="main-content">
+          <div class="step-indicator">
+            <div class="circle"></div>
+            <div class="number">01</div>
+          </div>
+
+          <div class="gallery">
+            <div class="gallery-photo">
+              <img
+                src="assets/desktop/image-woman-in-videocall.jpg"
+                alt="Photo of woman in videocall"
+                width="256"
+                height="256"
+              />
+            </div>
+            <div class="gallery-photo">
+              <img
+                src="assets/desktop/image-women-videochatting.jpg"
+                alt="Photo of women videochatting"
+                width="256"
+                height="256"
+              />
+            </div>
+            <div class="gallery-photo">
+              <img
+                src="assets/desktop/image-men-in-meeting.jpg"
+                alt="Photo of men in meeting"
+                width="256"
+                height="256"
+              />
+            </div>
+            <div class="gallery-photo">
+              <img
+                src="assets/desktop/image-man-texting.jpg"
+                alt="Photo of man texting"
+                width="256"
+                height="256"
+              />
+            </div>
+          </div>
+
+          <div class="main-text">
+            <h3 class="heading-tertiary">Built for modern use</h3>
+            <h2 class="heading-secondary heading-secondary--main">
+              Smarter meetings, all in one place
+            </h2>
+            <p class="paragraph">
+              Send messages, share files, show your screen, and record your
+              meetings — all in one workspace. Control who can join with
+              invite-only team access, data encryption, and data export.
+            </p>
+          </div>
+        </section>
+      </main>
+
+      <div class="step-indicator step-indicator--2">
+        <div class="circle"></div>
+        <div class="number">02</div>
+      </div>
+
+      <footer class="footer">
+        <div class="bg-footer">
+          <picture class="bg-footer-content">
+            <source
+              srcset="assets/mobile/image-footer.jpg"
+              media="(max-width: 375px )"
+            />
+            <source
+              srcset="assets/tablet/image-footer.jpg"
+              media="(max-width: 48em)"
+            />
+            <img
+              src="assets/desktop/image-footer.jpg"
+              alt="Photo for the footer"
+              class="img-footer--desktop"
+            />
+          </picture>
+        </div>
+
+        <div class="footer-container">
+          <h2 class="heading-secondary heading-secondary--footer">
+            Experience more together
+          </h2>
+          <p class="paragraph paragraph--footer">
+            Stay connected with reliable HD meetings and unlimited one-on-one
+            and group video sessions.
+          </p>
+          <a href="#" class="btn btn-purple btn-footer">
+            Download <span>v1.3</span></a
+          >
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
