--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -80,7 +80,7 @@
 
         <section class="main-content">
           <div class="step-indicator">
-            <div class="circle"></div>
+            <div class="line"></div>
             <div class="number">01</div>
           </div>
 
@@ -134,7 +134,7 @@
       </main>
 
       <div class="step-indicator step-indicator--2">
-        <div class="circle"></div>
+        <div class="line"></div>
         <div class="number">02</div>
       </div>
 
